--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>HTML Code Tester</title>
-    <link rel="stylesheet" href="./style2.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <div class="container">
@@ -11,7 +11,7 @@
             <div>
                 <button onclick="insertTable()">Insert Table</button>
             </div>
-            <div>
+            <div
                 <button onclick="selectText()">Select Text</button>
                 <button onclick="applyBold()">Bold</button>
                 <!--<button onclick="applyright()">Align Right</button>-->
