added margin and outline to buttons in CSS and responsive design

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>HTML Code Tester</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="container">
@@ -11,7 +12,7 @@
             <div>
                 <button onclick="insertTable()">Insert Table</button>
             </div>
-            <div
+            <div>
                 <button onclick="selectText()">Select Text</button>
                 <button onclick="applyBold()">Bold</button>
                 <!--<button onclick="applyright()">Align Right</button>-->
