Added image, update stylesheet and Index

--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
 <body>
     <h1><u>About Me</u></h1>
     <br />
-    <p style="color:white;">Hello! My name is Maulin and I know this site is incredibly boring, but I am still learning!</p>
+    <p style="color:white; text-align: center;">Hello! My name is Maulin and I know this site is incredibly boring, but I am still learning!</p>
+    <img src="./IMG/a474.jpg" alt="Sunset" center width="1280" height="1600" class="center">
+    <a href="./index.html" style="color:white; text-align: right;">Click me to go to homepage</a>
 </body>
 </html>
