--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </textarea>
         <button onclick="preview()">Preview</button>
         <div id="preview" class="preview"></div>
+        <a href="./about.html" style="display: inline-block; padding: none 20px; background-color: white; color:black; text-decoration: none; border-radius: 5px;"><u>About Me</u></a>
     </div>
     <script src="./script.js"></script>
 </body>
